fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,6 @@ div#emp {position: absolute;
          width: 320px;
          height: 600px;
          background-color:rgba(236,246,192,1);
-         z-index: 1;
          left: 0%;
          top: 700px;
          box-shadow: 6px 6px 10px #666;
@@ -76,7 +75,6 @@ div#edu {position: absolute;
          width: 320px;
          height: 600px;
          background-color:rgba(236,246,192,1);
-         z-index: 1;
          left: 30%;
          top: 700px;
          box-shadow: 6px 6px 10px #666;
@@ -95,7 +93,6 @@ div#proj {position: absolute;
          width: 320px;
          height: 600px;
          background-color:rgba(236,246,192,1);
-         z-index: 1;
          left: 60%;
          top: 700px;
          box-shadow: 6px 6px 10px #666;
@@ -114,7 +111,6 @@ div#lang {position: absolute;
          width: 320px;
          height: 600px;
          background-color:rgba(236,246,192,1);
-         z-index: 1;
          left:90%;
          top: 700px;
          box-shadow: 6px 6px 10px #666;
